<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">A TV Remote</string>

    <!-- common ui -->
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">ok</string>
    <string name="button_close">close</string>
    <string name="button_next">next</string>
    <string name="button_back">go back</string>
    <string name="button_retry">retry</string>
    <string name="button_connect">connect</string>
    <string name="button_reconnect">reconnect</string>

    <!-- misc actions -->
    <string name="button_keystore_delete_and_retry">delete keys</string>

    <!-- general connection failures -->
    <string name="init_failure">failed to initialize</string>
    <string name="init_failure_desc_general">Failed to initialize cryptographic secrets.</string>
    <string name="init_failure_desc_corrupted_keystore">Failed to load cryptographic secrets used to secure the connection to your TV, they might be corrupted.</string>
    <string name="init_failure_desc_unsupported">One or more algorithms required for a secure connection to your TV are not supported by your device.</string>
    <string name="init_failure_desc_unexpected_error">Encountered an unexpected error while trying to initialize cryptographic secrets.</string>
    <string name="connect_failure">failed to connect</string>
    <string name="connect_failure_desc_bad_certificate">The SSL certificate provided by the TV is invalid. Make sure you have the correct device or try updating the app on your phone/TV.</string>
    <string name="connect_failure_desc_unexpected_error">Encountered an unexpected error while connecting to the TV.</string>
    <string name="action_failure">action error</string>

    <!-- crash -->
    <string name="title_application_error">internal error</string>
    <string name="description_application_error_connection_service_stopped">the connection service has unexpectedly stopped.</string>

    <!-- confirmation -->
    <string name="title_confirm">are you sure?</string>
    <string name="description_confirm_delete_keystore">You will have to pair your TV again.</string>
    <string name="button_confirm_delete">delete</string>

    <!-- connection status -->
    <string name="connection_status_connecting">connecting…</string>
    <string name="connection_status_hand_shaking">negotiating…</string>
    <string name="connection_status_ready">connected</string>
    <string name="connection_status_connection_lost">connection lost</string>

    <!-- notification -->
    <string name="background_connection_notification_channel_name">TV Connection</string>

    <!-- notification permission -->
    <string name="permission_rationale_notifications_title">Connection notification</string>
    <string name="permission_rationale_notifications_description">A TV Remote can keep the connection to your TV alive while you use other apps. For this, please grant permission to post notifications.</string>

    <!-- protocol errors -->
    <string name="protocol_error_unspecified">tv replied: unspecified error</string>
    <string name="protocol_error_unauthorized">tv replied: unauthorized</string>
    <string name="protocol_error_op_unsupported">operation not supported by TV</string>
    <string name="protocol_error_response_invalid">unexpected response from TV</string>
    <string name="protocol_error_unexpected">encountered unexpected error: {0} - {1}</string>
    <string name="protocol_error_event_timeout">timed out</string>

    <!-- tv discovery -->
    <string name="title_tvdiscovery">connect to TV</string>
    <string name="searching_for_tvs">searching for TVs running the receiver app</string>
    <string name="button_manual_connection">connect manually</string>
    <string name="discovery_result_entry_resolving">resolving…</string>
    <string name="discovery_result_entry_uri_format">tcp://{0}:{1}</string>

    <!-- tv discovery errors -->
    <string name="discovery_failed_init">TV discovery failed</string>
    <string name="discovery_failed_resolution">resolve failed: {0}</string>
    <string name="discovery_failed_internal_error">internal error</string>
    <string name="discovery_failed_max_limit">too many service discovery instances open on your device</string>
    <string name="discovery_failed_unexpected">unexpected error {0}</string>

    <!-- manual connection -->
    <string name="title_manual_connection">manual connection</string>
    <string name="description_manual_connection">manually specify the IP address and port number the receiver app has bound to on your TV</string>
    <string name="hint_manual_connection_hostname">host</string>
    <string name="hint_manual_connection_port">port</string>
    <string name="error_requires_hostname">must specify hostname</string>
    <string name="error_requires_port">must specify port number</string>
    <string name="error_numeric_port">must be a number</string>
    <string name="error_range_port">must be between 0 and 65535</string>

    <!-- remote buttons -->
    <!-- the remote buttons don't actually have text, these are accessibility hints -->
    <string name="button_up">up</string>
    <string name="button_notifications">notifications</string>
    <string name="button_left">left</string>
    <string name="button_select">select</string>
    <string name="button_right">right</string>
    <string name="button_down">down</string>
    <string name="button_quick_settings">quick settings</string>
    <string name="button_skip_backward">skip backward</string>
    <string name="button_previous_track">previous track</string>
    <string name="button_toggle_playing">pause/play</string>
    <string name="button_next_track">next track</string>
    <string name="button_skip_forward">skip forward</string>
    <string name="button_navigate_back">back</string>
    <string name="button_navigate_home">home</string>
    <string name="button_navigate_recent">recent</string>
    <string name="button_trackpad_left_click">left click</string>
    <string name="button_power">power</string>

    <!-- volume dialog -->
    <string name="title_volume_dialog">Adjust Volume</string>
    <string name="button_volume_controls">volume controls</string>
    <string name="button_volume_up">volume up</string>
    <string name="button_volume_down">volume down</string>
    <string name="button_mute_toggle">toggle mute</string>

    <!-- remote nav bar (for control screen switching) -->
    <string name="nav_button_dpad">dpad</string>
    <string name="nav_button_accessibility_dpad">directional pad</string>
    <string name="nav_button_mouse">mouse</string>
    <string name="nav_button_accessibility_mouse">mouse control</string>
    <string name="nav_button_media">media</string>
    <string name="nav_button_accessibility_media">@string/nav_button_media</string>
    <string name="nav_button_keyboard">keyboard</string>
    <string name="nav_button_accessibility_keyboard">keyboard entry</string>

    <!-- pairing -->
    <string name="title_pairing_connecting">connecting…</string>
    <string name="description_pairing_connecting">connecting to {0}</string>

    <string name="title_pairing_hand_shaking">hand-shaking…</string>
    <string name="description_pairing_hand_shaking">asking to pair with {0}</string>

    <string name="title_pairing_authenticating">pairing…</string>
    <string name="description_pairing_authenticating">authenticating with {0}</string>

    <!-- pairing errors -->
    <string name="title_pairing_error">pairing failed</string>
    <string name="description_pairing_error_connection_lost">lost connection with your TV</string>
    <string name="description_pairing_error_fingerprint_differs">failed to verify connection security. someone may have intercepted your connection! please secure your network before trying again.</string>

    <!-- pairing code entry -->
    <string name="title_pairing_code_entry">Pairing code</string>
    <string name="description_pairing_code_entry">Please enter the 6 digit pairing code displayed on your TV</string>
    <string name="hint_pairing_code">code</string>
    <string name="error_pairing_code_length">must be 6 digits</string>

    <!-- fingerprint verification -->
    <string name="title_fingerprint_verification">Verify authenticity</string>
    <string name="description_fingerprint_verficiation">Please verify that the code below matches the one on your TV.</string>
    <string name="button_fingerprints_match">they match</string>
    <string name="button_fingerprints_differ">they\'re different!</string>

    <!-- error screen -->
    <string name="dropdown_expand_stack_trace">show stack trace</string>
    <string name="dropdown_retract_stack_trace">hide stack trace</string>
    <string name="exception_line">{0}: {1}</string>
    <string name="exception_line_error_message">error: {0}</string>
    <string name="exception_caused_by">caused by {0}</string>

    <!-- media -->
    <string name="media_display_timestamp_elapsed_placeholder" tools:ignore="TypographyDashes">- : - -</string>
    <string name="media_display_timestamp_end_placeholder" tools:ignore="TypographyDashes">" / - : - -"</string>
    <string name="media_display_timestamp_end_format">" / {0} "</string>
    <string name="media_display_timestamp_minutes">{0}:{1}</string>
    <string name="media_display_timestamp_hours">{0}:{1}:{2}</string>

    <!-- keyboard -->
    <string name="keyboard_auto_type_text_entry_hint">text entry</string>
    <string name="keyboard_auto_type_submit_button">send to tv</string>
    <string name="keyboard_home_button">home</string>
    <string name="keyboard_up_arrow">up arrow</string>
    <string name="keyboard_end_button">end</string>
    <string name="keyboard_delete_button">del</string>
    <string name="keyboard_left_arrow">left arrow</string>
    <string name="keyboard_down_arrow">down arrow</string>
    <string name="keyboard_right_arrow">right arrow</string>
    <string name="keyboard_backspace">backspace</string>
    <string name="keyboard_shift">shift</string>
    <string name="keyboard_action_button_default">submit</string>
    <string name="keyboard_auto_type_error_commit_failed">failed to commit text</string>

</resources>