<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <io.benwiegand.atvremote.phone.ui.view.RemoteImageButton
            android:id="@+id/volume_up_button"
            style="@style/Widget.Theme.ATVRemote.RemoteImageButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/button_volume_up"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

        <io.benwiegand.atvremote.phone.ui.view.RemoteImageButton
            android:id="@+id/volume_down_button"
            style="@style/Widget.Theme.ATVRemote.RemoteImageButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/button_volume_down"
            app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

    </LinearLayout>

    <io.benwiegand.atvremote.phone.ui.view.RemoteImageButton
        android:id="@+id/mute_button"
        style="@style/Widget.Theme.ATVRemote.RemoteImageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/button_mute_toggle"
        app:srcCompat="@android:drawable/ic_lock_silent_mode" />


</LinearLayout>