<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                android:id="@+id/up_button"
                style="@style/Widget.Theme.ATVRemote.RemoteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_up"
                android:rotation="-90"
                app:srcCompat="@drawable/arrow" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

                <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                    android:id="@+id/menu_button"
                    style="@style/Widget.Theme.ATVRemote.RemoteButton"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/button_notifications"
                    app:srcCompat="@drawable/notifications" />

            </FrameLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                android:id="@+id/left_button"
                style="@style/Widget.Theme.ATVRemote.RemoteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_left"
                android:rotation="180"
                app:srcCompat="@drawable/arrow" />

            <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                android:id="@+id/select_button"
                style="@style/Widget.Theme.ATVRemote.RemoteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_select"
                app:srcCompat="@drawable/circle" />

            <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                android:id="@+id/right_button"
                style="@style/Widget.Theme.ATVRemote.RemoteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_right"
                app:srcCompat="@drawable/arrow" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <io.benwiegand.atvremote.phone.ui.view.RemoteButton
                android:id="@+id/down_button"
                style="@style/Widget.Theme.ATVRemote.RemoteButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/button_down"
                android:rotation="90"
                app:srcCompat="@drawable/arrow" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

    </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
